# NE-336

./: pyproject.toml
NE-336/Notes/: lesson1.ipynb
nano-computer-aided-design/Assignment 1/: assignment1.ipynb
nano-computer-aided-design/Lab 1/: lab1.ipynb  linear_system.py  myNR_algorithm.py
nano-computer-aided-design/Notes/: lesson1-checkpoint.ipynb
notebooks/: assignment1.ipynb  assignment1.py
