[tool.poetry]
name = "ne-336"
version = "0.1.0"
description = "A python package for NE336, a UW NE undergraduate course"
authors = ["Matthew Athanasopoulos <matthew.athanasopoulos@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"
scipy = "^1.14.1"
matplotlib = "^3.9.2"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
